# mppi_controller

./: .gitmodules  CMakeLists.txt  README.md  critics.xml  mppic.xml  package.xml
.github/: CODEOWNERS
cfg/: Ackermann.cfg  BaseCritic.cfg  ConstraintCritic.cfg  GoalAngleCritic.cfg  GoalCritic.cfg  MPPIController.cfg  NoiseGenerator.cfg  ObstacleCritic.cfg  PathAlignCritic.cfg  PathAngleCritic.cfg  PathFollowCritic.cfg  PathHeadingCritic.cfg  PreferForwardCritic.cfg  TwirlingCritic.cfg
include/mppi_controller/: controller.hpp  critic_data.hpp  critic_function.hpp  critic_manager.hpp  motion_models.hpp  optimizer.hpp
include/mppi_controller/critics/: constraint_critic.hpp  goal_angle_critic.hpp  goal_critic.hpp  obstacles_critic.hpp  path_align_critic.hpp  path_align_legacy_critic.hpp  path_angle_critic.hpp  path_follow_critic.hpp  path_heading_critic.hpp  prefer_forward_critic.hpp  twirling_critic.hpp
include/mppi_controller/models/: constraints.hpp  control_sequence.hpp  optimizer_settings.hpp  path.hpp  state.hpp  trajectories.hpp
include/mppi_controller/tools/: noise_generator.hpp  path_handler.hpp  trajectory_visualizer.hpp  utils.hpp
src/: controller.cpp  critic_manager.cpp  noise_generator.cpp  optimizer.cpp  parameters_handler.cpp  path_handler.cpp  trajectory_visualizer.cpp
src/critics/: constraint_critic.cpp  goal_angle_critic.cpp  goal_critic.cpp  obstacles_critic.cpp  path_align_critic.cpp  path_align_legacy_critic.cpp  path_angle_critic.cpp  path_follow_critic.cpp  path_heading_critic.cpp  prefer_forward_critic.cpp  twirling_critic.cpp
test/: controller_state_transition_test.cpp  critic_manager_test.cpp  critics_tests.cpp  models_test.cpp  motion_model_tests.cpp  noise_generator_test.cpp  optimizer_smoke_test.cpp  optimizer_unit_tests.cpp  parameter_handler_test.cpp  path_handler_test.cpp  trajectory_visualizer_tests.cpp  utils_test.cpp
test/utils/: factory.hpp  utils.hpp
