<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mppi_controller</name>
  <version>1.2.0</version>
  <description>mppi_controller for ROS 1</description>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <maintainer email="budyakov.aleksei@gmail.com">Aleksei Budyakov</maintainer>
  <maintainer email="renan028@gmail.com">Renan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>angles</depend>
  <depend>base_local_planner</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>mbf_costmap_core</depend>
  <depend>mbf_msgs</depend>
  <depend>mbf_utility</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <depend>xtensor</depend>
  <depend>libomp-dev</depend>
  <depend>benchmark</depend>
  <depend>xsimd</depend>

  <export>
    <mbf_costmap_core plugin="${prefix}/mppic.xml" />
    <mppi_controller plugin="${prefix}/critics.xml" />
  </export>

</package>
